src/test/deca/context/invalid/new-noClass.deca
class Sasuke {}
class Naruto {

    int newUzumaki() {
        Naruto Uzumaki = new Sakura();
        return 18;
    }
}
{}
